# programming_practice

./: .gitignore  AI_RECOMMENDATION_FIX_REPORT.md  AI_TEST_GUIDE.md  BUG_FIX_TEST_GUIDE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_import.txt  CMakeLists_minimal.txt  CONTRIBUTING.md  FINAL_CHECKLIST.md  FINAL_FIX_SUMMARY.md  FIXED_SYSTEM_DEMO.md  GITHUB_UPLOAD_GUIDE.md  GUI_DIAGNOSIS_REPORT.md  LICENSE  MODIFICATION_SUMMARY.md  PRODUCT_EDIT_FIX.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RECOMMENDATION_FIX_GUIDE.md  TESTING_GUIDE.md  TEST_REPORT.md  USAGE_DEMO.md  fix_ai_recommendation_system.py  full_system_test.py  import_products.cpp  import_products_simple.py  integration_guide.md  minimal_test.cpp  reimport_products_with_new_barcodes.py  revert_to_simple_ids.py  simple_test.cpp  simplify_product_ids.py  start_complete_system.py  start_system.bat  start_system.py  (+23 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
Ai_model/: ai_to_db_id_mapping.json  ai_to_db_id_mapping.json.random_backup  ai_to_db_id_mapping.json.restructure_backup_20250717_234218  api_server.py  api_server.py.restructure_backup_20250717_234218  db_to_ai_id_mapping.json  db_to_ai_id_mapping.json.random_backup  db_to_ai_id_mapping.json.restructure_backup_20250717_234218  generate_sft_data.py  index_to_id.json  index_to_id.json.random_backup  index_to_id.json.restructure_backup_20250717_234218  main.py  products.index  products.json  products.json.random_backup  products.json.restructure_backup_20250717_234218  requirements.txt  sft_llm_data.jsonl  sft_retriever_data.jsonl  start_ai_server.py  train_retriever.py
Ai_model/fine-tuned-retriever/: README.md
resources/: create_pngs.py  create_valid_pngs.py  icons.qrc  resources.qrc
scripts/: build.bat  build.sh  init-git.sh  setup-dev.sh
src/: main.cpp
src/ai/: AIClient.cpp  AIClient.h  AIRecommender.cpp  AIRecommender.h
src/barcode/: BarcodeScanner.cpp  BarcodeScanner.h  README.md
src/controllers/: CheckoutController.cpp  CheckoutController.h  ProductManager.cpp  ProductManager.h  RecommendationController.cpp  RecommendationController.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Customer.cpp  Customer.h  Product.cpp  Product.h  Sale.cpp  Sale.h  SaleItem.cpp  SaleItem.h
src/ui/: CartDelegate.cpp  CartDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PaymentDialog.cpp  PaymentDialog.h  ProductDialog.cpp  ProductDialog.h  ProductManagementDialog.cpp  ProductManagementDialog.h  RecommendationDialog.cpp  RecommendationDialog.h  RecommendationItemWidget.cpp  RecommendationItemWidget.h  SalesReportDialog.cpp  SalesReportDialog.h  SalesReportDialog.ui
src/utils/: ReceiptPrinter.cpp  ReceiptPrinter.h
tests/: CMakeLists.txt  TestCommon.cpp  TestCommon.h  debug_gui_test.cpp
tests/integration/: CMakeLists.txt  TestGUIAutomation.cpp  TestGUIBasic.cpp  TestGUIInterface.cpp  TestSmartPOSWorkflow.cpp
tests/unit/: CMakeLists.txt  TestAIRecommender.cpp  TestCheckoutController.cpp  TestDatabaseManager.cpp  TestProduct.cpp  TestProductManager.cpp
